--- a/week01/file-paths.html
+++ b/week01/file-paths.html
@@ -14,8 +14,12 @@
     <p>A temple image file in the images subfolder:</p>
     <img src="images/aba-nigeria-temple.jpeg" alt="The Aba Nigeria Temple">
 
-    <p>A temple image file in the root images folder:</p>
+    <!-- This might break live. It's better to use relative paths -->
+    <p>A temple image file in the root images folder: (will not work in GitHub Pages)</p>
     <img src="/images/salt-lake-temple.jpg" alt="The Salt Lake Temple">
+
+    <p>A temple image file in the root images folder:</p>
+    <img src="../images/salt-lake-temple.jpg" alt="The Salt Lake Temple">
 
     <p>A temple image file with an absolute path:</p>
     <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/anchorage-alaska/320x180/anchorage-temple-lds-253274-wallpaper.jpg"
