Refactor basic-layout.html to improve structure and semantics

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Basic HTML Structure</title>
+  <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+  <meta name="author" content="Leonidas Yopan">
 </head>
+
 <body>
-    
+  <header>
+    <img src="images/basic-logo.png" alt="Basic Logo of Our HTML Structure Example" width="180" height="180">
+  </header>
+  <nav>
+    <ul>
+      <li><a href="https://github.com/leonidasyopan" target="_blank">GitHub</a></li>
+      <li><a href="https://www.linkedin.com/in/leonidasyopan/" target="_blank">LinkedIn</a></li>
+    </ul>
+  </nav>
+  <main>
+    <h1>Basic HTML Structure</h1>
+    <section>
+      <h2>Heading 1</h2>
+      <p>This is a simple HTML document that demonstrates the use of semantic HTML elements such as header, nav,
+        main, section, and footer.</p>
+    </section>
+    <section>
+      <h2>Heading 2</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet sapiente aperiam, eius itaque autem optio
+        tenetur quas laudantium aliquam natus.</p>
+    </section>
+  </main>
+  <aside>
+    <img
+      src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/aba-nigeria/200x320/aba-nigeria-temple-lds-248706-wallpaper.jpg"
+      alt="Aba Nigeria Temple" width="200">
+  </aside>
+  <footer>
+    <p>&copy; 2025 Leonidas Yopan</p>
+  </footer>
 </body>
+
 </html>
