--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
-</head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
+<html lang="en-US">
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Leonidas Yopan | WDD 130</title>
+    <link rel="stylesheet" href="styles/styles.css">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Site</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Leonidas Yopan | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Hello, my name is Leonidas Yopan" width="200">
+        <p>Hello! My name is Leonidas Yopan and I am from Santo Amaro da Imperatriz, SC, Brazil. I enjoy listening to
+            music, watching films and playing with my kids. </p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex sapiente possimus nisi tenetur vitae consectetur
+            nemo dolore? Eum odio molestiae magni. Dicta nostrum quisquam vel officia possimus sapiente blanditiis
+            nobis.</p>
+    </main>
+    <footer>
+        <p>&copy;2025 Leonidas Yopan ⛰️ Santo Amaro da Imperatriz, SC, Brazil</p>
+    </footer>
 </body>
+
 </html>
