--- a/index.html
+++ b/index.html
@@ -1,32 +1,74 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Leonidas Yopan | WDD 130</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WDD 130 Block Course | Leonidas Yopan</title>
+    <meta name="description"
+        content="This is the homepage for the WDD 130 example site created by Brother Leonidas Yopan">
+    <meta name="author" content="Leonidas Yopan">
+
     <link rel="stylesheet" href="styles/styles.css">
+
 </head>
 
 <body>
+
     <header>
         <nav>
-            <a href="#">Home</a>
-            <a href="wwr/">Rafting Site</a>
+            <a href="index.html">Rafting Site</a>
+            <a href="https://www.linkedin.com/in/leonidasyopan/" target="_blank">LinkedIn Profile</a>
+            <a href="https://www.instagram.com/leonidasyopan.br/" target="_blank">Instagram</a>
         </nav>
     </header>
-    <main>
-        <h1>Leonidas Yopan | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello, my name is Leonidas Yopan" width="200">
-        <p>Hello! My name is Leonidas Yopan and I am from Santo Amaro da Imperatriz, SC, Brazil. I enjoy listening to
-            music, watching films and playing with my kids. </p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex sapiente possimus nisi tenetur vitae consectetur
-            nemo dolore? Eum odio molestiae magni. Dicta nostrum quisquam vel officia possimus sapiente blanditiis
-            nobis.</p>
-    </main>
+
+
+    <div class="grid">
+
+        <main>
+            <h1>Leonidas Yopan | WDD 130</h1>
+            <img src="images/lenidas-yopan-profile.jpg" alt="Profile image" class="profile" width="200">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, non?</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur, quo nobis impedit sint doloribus
+                nulla! Consequuntur, saepe explicabo voluptate modi quae, dolor dicta magni fuga corporis alias aliquid
+                est eum.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero, ut itaque temporibus rem explicabo
+                fugit repellendus quisquam animi magnam. Temporibus voluptatem eum eos nesciunt nihil.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique magnam non rem blanditiis eaque quasi
+                maiores sit fuga facere minus voluptatem cum explicabo in doloribus impedit repellat magni vitae aliquid
+                odit, porro sunt provident obcaecati! Alias eligendi officia architecto culpa beatae, esse, blanditiis
+                delectus laborum obcaecati quos maxime sequi ducimus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa soluta saepe maiores recusandae alias
+                similique placeat ab voluptatem quibusdam blanditiis fuga dolores, asperiores, accusantium quia velit
+                possimus nihil vitae. Facilis.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi impedit voluptatibus minus repellendus
+                numquam mollitia non quibusdam sequi. Ipsa in mollitia eligendi laudantium. Dicta, quidem.</p>
+            <ul class="box">
+                <li><a href="https://newsroom.churchofjesuschrist.org/article/curitiba-brazil-temple">Curitiba Brazil
+                        Temple</a>
+                </li>
+                <li><a href="https://newsroom.churchofjesuschrist.org/article/porto-alegre-brazil-temple">Porto Alegre
+                        Brazil Temple</a></li>
+                <li><a href="https://newsroom.churchofjesuschrist.org/article/manaus-brazil-temple">Additional
+                        Resource Manaus Brazil Temple</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <p>wip</p>
+        </aside>
+    </div>
+
     <footer>
-        <p>&copy;2025 Leonidas Yopan ⛰️ Santo Amaro da Imperatriz, SC, Brazil</p>
+        <p>&copy; <span id="year"></span> Leonidas Yopan </p>
+        <p>This is an reference for Students at taking WDD 130 - Web
+            Fundamentals at BYU Pathway Worldwide</p>
     </footer>
+    <script>
+        let year = new Date().getFullYear();
+        document.getElementById('year').innerHTML = year;
+    </script>
+
 </body>
 
 </html>
