Creating distribution of content using CSS Grid and CSS Flexbox

--- a/index.html
+++ b/index.html
@@ -17,52 +17,53 @@
 
     <header>
         <nav>
-            <a href="index.html">Rafting Site</a>\
+            <a href="index.html">Rafting Site</a>
             <a href="https://www.linkedin.com/in/leonidasyopan/" target="_blank">My LinkedIn Profile</a>
             <a href="https://facebook.com" target="_blank">Facebook</a>
         </nav>
     </header>
 
-
-    <main>
-        <h1>Leonidas Yopan | WDD 130</h1>
-        <img src="images/lenidas-yopan-profile.jpg" alt="Profile image" class="profile" width="200">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, non?</p>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur, quo nobis impedit sint doloribus
-            nulla! Consequuntur, saepe explicabo voluptate modi quae, dolor dicta magni fuga corporis alias aliquid
-            est eum.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero, ut itaque temporibus rem explicabo
-            fugit repellendus quisquam animi magnam. Temporibus voluptatem eum eos nesciunt nihil.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique magnam non rem blanditiis eaque quasi
-            maiores sit fuga facere minus voluptatem cum explicabo in doloribus impedit repellat magni vitae aliquid
-            odit, porro sunt provident obcaecati! Alias eligendi officia architecto culpa beatae, esse, blanditiis
-            delectus laborum obcaecati quos maxime sequi ducimus. Lorem ipsum dolor, sit amet consectetur
-            adipisicing elit. Similique magnam non rem blanditiis eaque quasi
-            maiores sit fuga facere minus voluptatem cum explicabo in doloribus impedit repellat magni vitae aliquid
-            odit, porro sunt provident obcaecati! Alias eligendi officia architecto culpa beatae, esse, blanditiis
-            delectus laborum obcaecati quos maxime sequi ducimus.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa soluta saepe maiores recusandae alias
-            similique placeat ab voluptatem quibusdam blanditiis fuga dolores, asperiores, accusantium quia velit
-            possimus nihil vitae. Facilis.</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi impedit voluptatibus minus repellendus
-            numquam mollitia non quibusdam sequi. Ipsa in mollitia eligendi laudantium. Dicta, quidem.</p>
-        <ul class="box">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/porto-alegre-brazil-temple?lang=eng"
-                    target="_blank">Porto Alegre Brazil Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/curitiba-brazil-temple?lang=eng"
-                    target="_blank">Curitiba Brazil Temple
-                </a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/brasilia-brazil-temple?lang=eng"
-                    target="_blank">Brasília Brazil Temple
-                </a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Santa Catarina</h2>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2b/Itaimbezinho_-_Parque_Nacional_Aparados_da_Serra_32.JPG/800px-Itaimbezinho_-_Parque_Nacional_Aparados_da_Serra_32.JPG"
-            alt="Araucarias in Santa Catarina, Brazil">
-        <p>wip</p>
-    </aside>
+    <div class="grid">
+        <main>
+            <h1>Leonidas Yopan | WDD 130</h1>
+            <img src="images/lenidas-yopan-profile.jpg" alt="Profile image" class="profile" width="200">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, non?</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur, quo nobis impedit sint doloribus
+                nulla! Consequuntur, saepe explicabo voluptate modi quae, dolor dicta magni fuga corporis alias aliquid
+                est eum.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero, ut itaque temporibus rem explicabo
+                fugit repellendus quisquam animi magnam. Temporibus voluptatem eum eos nesciunt nihil.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique magnam non rem blanditiis eaque quasi
+                maiores sit fuga facere minus voluptatem cum explicabo in doloribus impedit repellat magni vitae aliquid
+                odit, porro sunt provident obcaecati! Alias eligendi officia architecto culpa beatae, esse, blanditiis
+                delectus laborum obcaecati quos maxime sequi ducimus. Lorem ipsum dolor, sit amet consectetur
+                adipisicing elit. Similique magnam non rem blanditiis eaque quasi
+                maiores sit fuga facere minus voluptatem cum explicabo in doloribus impedit repellat magni vitae aliquid
+                odit, porro sunt provident obcaecati! Alias eligendi officia architecto culpa beatae, esse, blanditiis
+                delectus laborum obcaecati quos maxime sequi ducimus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa soluta saepe maiores recusandae alias
+                similique placeat ab voluptatem quibusdam blanditiis fuga dolores, asperiores, accusantium quia velit
+                possimus nihil vitae. Facilis.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi impedit voluptatibus minus repellendus
+                numquam mollitia non quibusdam sequi. Ipsa in mollitia eligendi laudantium. Dicta, quidem.</p>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/porto-alegre-brazil-temple?lang=eng"
+                        target="_blank">Porto Alegre Brazil Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/curitiba-brazil-temple?lang=eng"
+                        target="_blank">Curitiba Brazil Temple
+                    </a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/brasilia-brazil-temple?lang=eng"
+                        target="_blank">Brasília Brazil Temple
+                    </a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Santa Catarina</h2>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2b/Itaimbezinho_-_Parque_Nacional_Aparados_da_Serra_32.JPG/800px-Itaimbezinho_-_Parque_Nacional_Aparados_da_Serra_32.JPG"
+                alt="Araucarias in Santa Catarina, Brazil">
+            <p>wip</p>
+        </aside>
+    </div>
 
     <footer>
         <p>&copy; <span id="year"></span> Leonidas Yopan </p>
