style: restructure form layout with grid and enhance CSS for better readability

--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -16,22 +16,30 @@
     <form action="">
       <fieldset>
         <legend>Contact Information</legend>
-        <label for="fullname">Full name:</label>
-        <input type="text" id="fullname" name="fullname">
-        <label for="email">Email:</label>
-        <input type="email" id="useremail" name="useremail">
+        <div class="form-item column2">
+          <label for="fullname">Full name:</label>
+          <input type="text" id="fullname" name="fullname">
+        </div>
+        <div class="form-item column2">
+          <label for="email">Email:</label>
+          <input type="email" id="useremail" name="useremail">
+        </div>
       </fieldset>
       <fieldset>
         <legend>Questions</legend>
-        <label for="browser">What is your favorite browser?</label>
-        <select name="browser" id="browser">
-          <option value="chrome">Chrome</option>
-          <option value="firefox">Firefox</option>
-          <option value="safari">Safari"></option>
-        </select>
-        <label for="pet">Do you have a household pet?</label>
-        <input type="checkbox" id="pet" name="pet" value="pet">
-        <label for="feedback">List the places you have lived.</label>
+        <div class="form-item column1">
+          <label for="browser">What is your favorite browser?</label>
+          <select name="browser" id="browser">
+            <option value="chrome">Chrome</option>
+            <option value="firefox">Firefox</option>
+            <option value="safari">Safari</option>
+          </select>
+        </div>
+        <div class="form-item column1">
+          <label for="pet">Do you have a household pet?</label>
+          <input type="checkbox" id="pet" name="pet" value="pet">
+        </div>
+        <label class="textarea-label" for="feedback">List the places you have lived.</label>
         <textarea name="feedback" id="feedback" cols="20"
           rows="4">Santo Amaro da Imperatriz, São José, Florianópolis</textarea>
       </fieldset>
