--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header>
         <nav>
-            <a href="index.html">Rafting Site</a>
+            <a href="wwr/about.html">Rafting Site</a>
             <a href="https://www.linkedin.com/in/leonidasyopan/" target="_blank">My LinkedIn Profile</a>
             <a href="https://facebook.com" target="_blank">Facebook</a>
         </nav>
